[package]
name = "clx"
version = "0.1.0"
edition = "2021"
authors = ["Karan <hello@mrkaran.dev>"]
description = "AI-powered CLI command generator"
repository = "https://github.com/mr-karan/clx"
license = "MIT"
keywords = ["cli", "ai", "openai", "groq", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# AI integration
genai = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Config paths
dirs = "5.0"

# UI utilities
spinoff = "0.8"
inquire = "0.7"

# Colored output
colored = "2.1"

[profile.release]
lto = true
strip = true
opt-level = "z"
